--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Dom Öğreniyorum!</title>
+<title>Learning DOM!</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -11,7 +11,7 @@
 <h3 class="city">İstanbul, Türkiye</h3>
 <ul>
     <li random="23">
-        Macbook!    <input type="button" value = "Sil!" class="right">
+        Macbook!    <input type="button" value = "Sil!" class="right silButon">
     </li> 
 </ul>
 <br>
