--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li random="23">
         Macbook!    <input type="button" value = "Sil!" class="right silButon">
     </li> 
+    <!-- butonu li içinden çıkar, before ile yazmaya calis -->
 </ul>
 <br>
 <input id="userInput" type="text" placeholder="Madde gir!">
